Entrega7/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC
Rule 2     auxprogramvars -> vars auxprogramvars
Rule 3     auxprogramvars -> empty
Rule 4     auxprogramfunct -> function auxprogramfunct
Rule 5     auxprogramfunct -> empty
Rule 6     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 7     arrayvals -> LFTBRACSQR arrayvalsaux RGTBRACSQR
Rule 8     arrayvalsaux -> cteNcteS codeAddValueArray
Rule 9     arrayvalsaux -> cteNcteS codeAddValueArray COMMA arrayvalsaux
Rule 10    cteNcteS -> cteN
Rule 11    cteNcteS -> cteS
Rule 12    assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 13    assignmentaux -> ID
Rule 14    assignmentaux -> array
Rule 15    blockreturn -> LFTBRAC blockneutral RGTBRAC
Rule 16    blockreturn -> LFTBRAC blockneutral RETURN exp codeReturnQuad SEMICOLON RGTBRAC
Rule 17    blockneutral -> statement blockneutral
Rule 18    blockneutral -> vars blockneutral
Rule 19    blockneutral -> empty
Rule 20    block -> LFTBRAC blockneutral RGTBRAC
Rule 21    condition -> IF conditionaux codeEndIf
Rule 22    condition -> IF conditionaux ELSE codeElse block codeEndIf
Rule 23    conditionaux -> LFTPAREN expression RGTPAREN codeGOTOF block codeGotoElseIf conditionaux2
Rule 24    conditionaux2 -> codeNextIf ELSEIF conditionaux
Rule 25    conditionaux2 -> empty
Rule 26    constant -> ID
Rule 27    constant -> array
Rule 28    constant -> cteN
Rule 29    constant -> cteS
Rule 30    constant -> TRUE codeAddConstBool
Rule 31    constant -> FALSE codeAddConstBool
Rule 32    constant -> call codeIsCalll
Rule 33    cteN -> FLOAT codeAddConstNumber
Rule 34    cteN -> INT codeAddConstNumber
Rule 35    cteS -> STRING codeAddConstString
Rule 36    exp -> term
Rule 37    exp -> term PLUS codeAddOperator exp
Rule 38    exp -> term MINUS codeAddOperator exp
Rule 39    factoraux -> constant
Rule 40    factoraux -> PLUS constant
Rule 41    factoraux -> MINUS constant
Rule 42    factor -> LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
Rule 43    factor -> factoraux codeAskFactor
Rule 44    expression -> exp
Rule 45    expression -> exp expressionaux codeAddOperator exp codeAskExpression
Rule 46    expressionaux -> AND
Rule 47    expressionaux -> DOUBEQUAL
Rule 48    expressionaux -> NOT
Rule 49    expressionaux -> OR
Rule 50    expressionaux -> LESSTHANEQUAL
Rule 51    expressionaux -> GREATTHANEQUAL
Rule 52    expressionaux -> GREATTHAN
Rule 53    expressionaux -> LESSTHAN
Rule 54    loop -> WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTOWhile
Rule 55    write -> PRINT LFTPAREN constant RGTPAREN SEMICOLON
Rule 56    parameter -> type codeCheckType ID codeAddParameters
Rule 57    parameter -> type codeCheckType ID codeAddParameters COMMA parameter
Rule 58    parameter -> empty
Rule 59    term -> factor MULTIPLICATION codeAddOperator term
Rule 60    term -> factor DIVISION codeAddOperator term
Rule 61    term -> factor codeAskTerm
Rule 62    statement -> assignment
Rule 63    statement -> condition
Rule 64    statement -> loop
Rule 65    statement -> write
Rule 66    statement -> read
Rule 67    statement -> call SEMICOLON
Rule 68    type -> INT
Rule 69    type -> FLOAT
Rule 70    type -> CHAR
Rule 71    type -> BOOL
Rule 72    type -> STRING
Rule 73    main -> codeLocationMain PRIOMH codeScope block
Rule 74    function -> FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
Rule 75    functionaux -> VOID codeTypeVoid codeCheckType
Rule 76    functionaux -> codeFuncIndicator type codeCheckType
Rule 77    vars -> type codeCheckType varsaux
Rule 78    varsaux2 -> COMMA varsaux
Rule 79    varsaux2 -> SEMICOLON
Rule 80    varsaux -> ID codeAddVar EQUAL expression varsaux2
Rule 81    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2
Rule 82    callaux -> codeMovePointer COMMA exp codeAddArguments callaux
Rule 83    callaux -> empty
Rule 84    call -> ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn
Rule 85    read -> READ LFTPAREN readaux RGTPAREN SEMICOLON
Rule 86    readaux -> ID
Rule 87    readaux -> array
Rule 88    empty -> <empty>
Rule 89    codeGotoElseIf -> <empty>
Rule 90    codeAddValueArray -> empty
Rule 91    codeTempReturn -> empty
Rule 92    codeIsCalll -> empty
Rule 93    codeGOSUB -> empty
Rule 94    codeVerifyNull -> empty
Rule 95    codeVerifyNull2 -> empty
Rule 96    codeMovePointer -> empty
Rule 97    codeAddArguments -> empty
Rule 98    codeEraQuad -> empty
Rule 99    codeVerifyFunct -> empty
Rule 100   codeReturnQuad -> <empty>
Rule 101   codeAddFunctQuad -> <empty>
Rule 102   codeLocationMain -> <empty>
Rule 103   codeGOTOMain -> <empty>
Rule 104   codeElse -> <empty>
Rule 105   codeEndIf -> <empty>
Rule 106   codeNextIf -> <empty>
Rule 107   codeGOTOF -> <empty>
Rule 108   codeGOTOWhile -> <empty>
Rule 109   codeWhileCondition -> <empty>
Rule 110   codeScope -> <empty>
Rule 111   codeCheckType -> <empty>
Rule 112   codeAddVar -> <empty>
Rule 113   codeAddVarArreglo -> <empty>
Rule 114   codeAddParameters -> <empty>
Rule 115   codeNameOfFunct -> <empty>
Rule 116   codeTypeVoid -> <empty>
Rule 117   codeFuncIndicator -> <empty>
Rule 118   codeDeleteOpenParen -> empty
Rule 119   codeAddOpenParen -> empty
Rule 120   codeAddConstBool -> empty
Rule 121   codeAddConstString -> empty
Rule 122   codeAddConstNumber -> empty
Rule 123   codeAddOperator -> empty
Rule 124   codeAskTerm -> empty
Rule 125   codeAskFactor -> empty
Rule 126   codeAskExpression -> empty

Terminals, with rules where they appear

AND                  : 46
BOOL                 : 71
CHAR                 : 70
COMMA                : 9 57 78 82
DIVISION             : 60
DOUBEQUAL            : 47
ELSE                 : 22
ELSEIF               : 24
EQUAL                : 12 80 81
FALSE                : 31
FLOAT                : 33 69
FUNCTION             : 74
GREATTHAN            : 52
GREATTHANEQUAL       : 51
ID                   : 1 6 13 26 56 57 74 80 81 84 86
IF                   : 21 22
INT                  : 34 68 81
LESSTHAN             : 53
LESSTHANEQUAL        : 50
LFTBRAC              : 1 15 16 20
LFTBRACSQR           : 6 7 81
LFTPAREN             : 23 42 54 55 74 84 85
MINUS                : 38 41
MULTIPLICATION       : 59
NOT                  : 48
OR                   : 49
PLUS                 : 37 40
PRINT                : 55
PRIOMH               : 73
PROGRAM              : 1
READ                 : 85
RETURN               : 16
RGTBRAC              : 1 15 16 20
RGTBRACSQR           : 6 7 81
RGTPAREN             : 23 42 54 55 74 84 85
SEMICOLON            : 12 16 55 67 79 85
STRING               : 35 72
TRUE                 : 30
VOID                 : 75
WHILE                : 54
error                : 

Nonterminals, with rules where they appear

array                : 14 27 87
arrayvals            : 81
arrayvalsaux         : 7 9
assignment           : 62
assignmentaux        : 12
auxprogramfunct      : 1 4
auxprogramvars       : 1 2
block                : 22 23 54 73
blockneutral         : 15 16 17 18 20
blockreturn          : 74
call                 : 32 67
callaux              : 82 84
codeAddArguments     : 82 84
codeAddConstBool     : 30 31
codeAddConstNumber   : 33 34
codeAddConstString   : 35
codeAddFunctQuad     : 74
codeAddOpenParen     : 42
codeAddOperator      : 37 38 45 59 60
codeAddParameters    : 56 57
codeAddValueArray    : 8 9
codeAddVar           : 80
codeAddVarArreglo    : 81
codeAskExpression    : 45
codeAskFactor        : 42 43
codeAskTerm          : 61
codeCheckType        : 56 57 75 76 77
codeDeleteOpenParen  : 42
codeElse             : 22
codeEndIf            : 21 22
codeEraQuad          : 84
codeFuncIndicator    : 76
codeGOSUB            : 84
codeGOTOF            : 23 54
codeGOTOMain         : 1
codeGOTOWhile        : 54
codeGotoElseIf       : 23
codeIsCalll          : 32
codeLocationMain     : 73
codeMovePointer      : 82
codeNameOfFunct      : 74
codeNextIf           : 24
codeReturnQuad       : 16
codeScope            : 73 74 74
codeTempReturn       : 84
codeTypeVoid         : 75
codeVerifyFunct      : 84
codeVerifyNull       : 84
codeVerifyNull2      : 
codeWhileCondition   : 54
condition            : 63
conditionaux         : 21 22 24
conditionaux2        : 23
constant             : 39 40 41 55
cteN                 : 10 28
cteNcteS             : 8 9
cteS                 : 11 29
empty                : 3 5 19 25 58 83 90 91 92 93 94 95 96 97 98 99 118 119 120 121 122 123 124 125 126
exp                  : 6 16 37 38 44 45 45 82 84
expression           : 12 23 42 54 80
expressionaux        : 45
factor               : 59 60 61
factoraux            : 43
function             : 4
functionaux          : 74
loop                 : 64
main                 : 1
parameter            : 57 74
program              : 0
read                 : 66
readaux              : 85
statement            : 17
term                 : 36 37 38 59 60
type                 : 56 57 76 77
vars                 : 2 18
varsaux              : 77 78
varsaux2             : 80 81
write                : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC
    (2) auxprogramvars -> . vars auxprogramvars
    (3) auxprogramvars -> . empty
    (77) vars -> . type codeCheckType varsaux
    (88) empty -> .
    (68) type -> . INT
    (69) type -> . FLOAT
    (70) type -> . CHAR
    (71) type -> . BOOL
    (72) type -> . STRING

    FUNCTION        reduce using rule 88 (empty -> .)
    PRIOMH          reduce using rule 88 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    auxprogramvars                 shift and go to state 5
    vars                           shift and go to state 6
    type                           shift and go to state 12
    empty                          shift and go to state 13

state 5

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars . codeGOTOMain auxprogramfunct main RGTBRAC
    (103) codeGOTOMain -> .

    FUNCTION        reduce using rule 103 (codeGOTOMain -> .)
    PRIOMH          reduce using rule 103 (codeGOTOMain -> .)

    codeGOTOMain                   shift and go to state 14

state 6

    (2) auxprogramvars -> vars . auxprogramvars
    (2) auxprogramvars -> . vars auxprogramvars
    (3) auxprogramvars -> . empty
    (77) vars -> . type codeCheckType varsaux
    (88) empty -> .
    (68) type -> . INT
    (69) type -> . FLOAT
    (70) type -> . CHAR
    (71) type -> . BOOL
    (72) type -> . STRING

    FUNCTION        reduce using rule 88 (empty -> .)
    PRIOMH          reduce using rule 88 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    vars                           shift and go to state 6
    auxprogramvars                 shift and go to state 15
    type                           shift and go to state 12
    empty                          shift and go to state 13

state 7

    (69) type -> FLOAT .

    ID              reduce using rule 69 (type -> FLOAT .)


state 8

    (68) type -> INT .

    ID              reduce using rule 68 (type -> INT .)


state 9

    (70) type -> CHAR .

    ID              reduce using rule 70 (type -> CHAR .)


state 10

    (71) type -> BOOL .

    ID              reduce using rule 71 (type -> BOOL .)


state 11

    (72) type -> STRING .

    ID              reduce using rule 72 (type -> STRING .)


state 12

    (77) vars -> type . codeCheckType varsaux
    (111) codeCheckType -> .

    ID              reduce using rule 111 (codeCheckType -> .)

    codeCheckType                  shift and go to state 16

state 13

    (3) auxprogramvars -> empty .

    FUNCTION        reduce using rule 3 (auxprogramvars -> empty .)
    PRIOMH          reduce using rule 3 (auxprogramvars -> empty .)


state 14

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain . auxprogramfunct main RGTBRAC
    (4) auxprogramfunct -> . function auxprogramfunct
    (5) auxprogramfunct -> . empty
    (74) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (88) empty -> .

    FUNCTION        shift and go to state 18
    PRIOMH          reduce using rule 88 (empty -> .)

    function                       shift and go to state 17
    auxprogramfunct                shift and go to state 19
    empty                          shift and go to state 20

state 15

    (2) auxprogramvars -> vars auxprogramvars .

    FUNCTION        reduce using rule 2 (auxprogramvars -> vars auxprogramvars .)
    PRIOMH          reduce using rule 2 (auxprogramvars -> vars auxprogramvars .)


state 16

    (77) vars -> type codeCheckType . varsaux
    (80) varsaux -> . ID codeAddVar EQUAL expression varsaux2
    (81) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2

    ID              shift and go to state 21

    varsaux                        shift and go to state 22

state 17

    (4) auxprogramfunct -> function . auxprogramfunct
    (4) auxprogramfunct -> . function auxprogramfunct
    (5) auxprogramfunct -> . empty
    (74) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (88) empty -> .

    FUNCTION        shift and go to state 18
    PRIOMH          reduce using rule 88 (empty -> .)

    function                       shift and go to state 17
    auxprogramfunct                shift and go to state 23
    empty                          shift and go to state 20

state 18

    (74) function -> FUNCTION . codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (110) codeScope -> .

    VOID            reduce using rule 110 (codeScope -> .)
    INT             reduce using rule 110 (codeScope -> .)
    FLOAT           reduce using rule 110 (codeScope -> .)
    CHAR            reduce using rule 110 (codeScope -> .)
    BOOL            reduce using rule 110 (codeScope -> .)
    STRING          reduce using rule 110 (codeScope -> .)

    codeScope                      shift and go to state 24

state 19

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct . main RGTBRAC
    (73) main -> . codeLocationMain PRIOMH codeScope block
    (102) codeLocationMain -> .

    PRIOMH          reduce using rule 102 (codeLocationMain -> .)

    codeLocationMain               shift and go to state 26
    main                           shift and go to state 25

state 20

    (5) auxprogramfunct -> empty .

    PRIOMH          reduce using rule 5 (auxprogramfunct -> empty .)


state 21

    (80) varsaux -> ID . codeAddVar EQUAL expression varsaux2
    (81) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2
    (112) codeAddVar -> .
    (113) codeAddVarArreglo -> .

    EQUAL           reduce using rule 112 (codeAddVar -> .)
    LFTBRACSQR      reduce using rule 113 (codeAddVarArreglo -> .)

    codeAddVar                     shift and go to state 28
    codeAddVarArreglo              shift and go to state 27

state 22

    (77) vars -> type codeCheckType varsaux .

    IF              reduce using rule 77 (vars -> type codeCheckType varsaux .)
    WHILE           reduce using rule 77 (vars -> type codeCheckType varsaux .)
    PRINT           reduce using rule 77 (vars -> type codeCheckType varsaux .)
    READ            reduce using rule 77 (vars -> type codeCheckType varsaux .)
    ID              reduce using rule 77 (vars -> type codeCheckType varsaux .)
    INT             reduce using rule 77 (vars -> type codeCheckType varsaux .)
    FLOAT           reduce using rule 77 (vars -> type codeCheckType varsaux .)
    CHAR            reduce using rule 77 (vars -> type codeCheckType varsaux .)
    BOOL            reduce using rule 77 (vars -> type codeCheckType varsaux .)
    STRING          reduce using rule 77 (vars -> type codeCheckType varsaux .)
    RGTBRAC         reduce using rule 77 (vars -> type codeCheckType varsaux .)
    RETURN          reduce using rule 77 (vars -> type codeCheckType varsaux .)
    FUNCTION        reduce using rule 77 (vars -> type codeCheckType varsaux .)
    PRIOMH          reduce using rule 77 (vars -> type codeCheckType varsaux .)


state 23

    (4) auxprogramfunct -> function auxprogramfunct .

    PRIOMH          reduce using rule 4 (auxprogramfunct -> function auxprogramfunct .)


state 24

    (74) function -> FUNCTION codeScope . functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (75) functionaux -> . VOID codeTypeVoid codeCheckType
    (76) functionaux -> . codeFuncIndicator type codeCheckType
    (117) codeFuncIndicator -> .

    VOID            shift and go to state 31
    INT             reduce using rule 117 (codeFuncIndicator -> .)
    FLOAT           reduce using rule 117 (codeFuncIndicator -> .)
    CHAR            reduce using rule 117 (codeFuncIndicator -> .)
    BOOL            reduce using rule 117 (codeFuncIndicator -> .)
    STRING          reduce using rule 117 (codeFuncIndicator -> .)

    functionaux                    shift and go to state 29
    codeFuncIndicator              shift and go to state 30

state 25

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main . RGTBRAC

    RGTBRAC         shift and go to state 32


state 26

    (73) main -> codeLocationMain . PRIOMH codeScope block

    PRIOMH          shift and go to state 33


state 27

    (81) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2

    LFTBRACSQR      shift and go to state 34


state 28

    (80) varsaux -> ID codeAddVar . EQUAL expression varsaux2

    EQUAL           shift and go to state 35


state 29

    (74) function -> FUNCTION codeScope functionaux . ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope

    ID              shift and go to state 36


state 30

    (76) functionaux -> codeFuncIndicator . type codeCheckType
    (68) type -> . INT
    (69) type -> . FLOAT
    (70) type -> . CHAR
    (71) type -> . BOOL
    (72) type -> . STRING

    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    type                           shift and go to state 37

state 31

    (75) functionaux -> VOID . codeTypeVoid codeCheckType
    (116) codeTypeVoid -> .

    ID              reduce using rule 116 (codeTypeVoid -> .)

    codeTypeVoid                   shift and go to state 38

state 32

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC .)


state 33

    (73) main -> codeLocationMain PRIOMH . codeScope block
    (110) codeScope -> .

    LFTBRAC         reduce using rule 110 (codeScope -> .)

    codeScope                      shift and go to state 39

state 34

    (81) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvals varsaux2

    INT             shift and go to state 40


state 35

    (80) varsaux -> ID codeAddVar EQUAL . expression varsaux2
    (44) expression -> . exp
    (45) expression -> . exp expressionaux codeAddOperator exp codeAskExpression
    (36) exp -> . term
    (37) exp -> . term PLUS codeAddOperator exp
    (38) exp -> . term MINUS codeAddOperator exp
    (59) term -> . factor MULTIPLICATION codeAddOperator term
    (60) term -> . factor DIVISION codeAddOperator term
    (61) term -> . factor codeAskTerm
    (42) factor -> . LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
    (43) factor -> . factoraux codeAskFactor
    (39) factoraux -> . constant
    (40) factoraux -> . PLUS constant
    (41) factoraux -> . MINUS constant
    (26) constant -> . ID
    (27) constant -> . array
    (28) constant -> . cteN
    (29) constant -> . cteS
    (30) constant -> . TRUE codeAddConstBool
    (31) constant -> . FALSE codeAddConstBool
    (32) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (33) cteN -> . FLOAT codeAddConstNumber
    (34) cteN -> . INT codeAddConstNumber
    (35) cteS -> . STRING codeAddConstString
    (84) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    LFTPAREN        shift and go to state 52
    PLUS            shift and go to state 47
    MINUS           shift and go to state 45
    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 41
    factoraux                      shift and go to state 42
    array                          shift and go to state 43
    cteN                           shift and go to state 44
    call                           shift and go to state 49
    factor                         shift and go to state 48
    term                           shift and go to state 54
    exp                            shift and go to state 58
    expression                     shift and go to state 59

state 36

    (74) function -> FUNCTION codeScope functionaux ID . codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (115) codeNameOfFunct -> .

    LFTPAREN        reduce using rule 115 (codeNameOfFunct -> .)

    codeNameOfFunct                shift and go to state 60

state 37

    (76) functionaux -> codeFuncIndicator type . codeCheckType
    (111) codeCheckType -> .

    ID              reduce using rule 111 (codeCheckType -> .)

    codeCheckType                  shift and go to state 61

state 38

    (75) functionaux -> VOID codeTypeVoid . codeCheckType
    (111) codeCheckType -> .

    ID              reduce using rule 111 (codeCheckType -> .)

    codeCheckType                  shift and go to state 62

state 39

    (73) main -> codeLocationMain PRIOMH codeScope . block
    (20) block -> . LFTBRAC blockneutral RGTBRAC

    LFTBRAC         shift and go to state 63

    block                          shift and go to state 64

state 40

    (81) varsaux -> ID codeAddVarArreglo LFTBRACSQR INT . RGTBRACSQR EQUAL arrayvals varsaux2

    RGTBRACSQR      shift and go to state 65


state 41

    (39) factoraux -> constant .

    MULTIPLICATION  reduce using rule 39 (factoraux -> constant .)
    DIVISION        reduce using rule 39 (factoraux -> constant .)
    PLUS            reduce using rule 39 (factoraux -> constant .)
    MINUS           reduce using rule 39 (factoraux -> constant .)
    AND             reduce using rule 39 (factoraux -> constant .)
    DOUBEQUAL       reduce using rule 39 (factoraux -> constant .)
    NOT             reduce using rule 39 (factoraux -> constant .)
    OR              reduce using rule 39 (factoraux -> constant .)
    LESSTHANEQUAL   reduce using rule 39 (factoraux -> constant .)
    GREATTHANEQUAL  reduce using rule 39 (factoraux -> constant .)
    GREATTHAN       reduce using rule 39 (factoraux -> constant .)
    LESSTHAN        reduce using rule 39 (factoraux -> constant .)
    COMMA           reduce using rule 39 (factoraux -> constant .)
    SEMICOLON       reduce using rule 39 (factoraux -> constant .)
    RGTPAREN        reduce using rule 39 (factoraux -> constant .)
    RGTBRACSQR      reduce using rule 39 (factoraux -> constant .)


state 42

    (43) factor -> factoraux . codeAskFactor
    (125) codeAskFactor -> . empty
    (88) empty -> .

    MULTIPLICATION  reduce using rule 88 (empty -> .)
    DIVISION        reduce using rule 88 (empty -> .)
    PLUS            reduce using rule 88 (empty -> .)
    MINUS           reduce using rule 88 (empty -> .)
    AND             reduce using rule 88 (empty -> .)
    DOUBEQUAL       reduce using rule 88 (empty -> .)
    NOT             reduce using rule 88 (empty -> .)
    OR              reduce using rule 88 (empty -> .)
    LESSTHANEQUAL   reduce using rule 88 (empty -> .)
    GREATTHANEQUAL  reduce using rule 88 (empty -> .)
    GREATTHAN       reduce using rule 88 (empty -> .)
    LESSTHAN        reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)
    SEMICOLON       reduce using rule 88 (empty -> .)
    RGTPAREN        reduce using rule 88 (empty -> .)
    RGTBRACSQR      reduce using rule 88 (empty -> .)

    codeAskFactor                  shift and go to state 66
    empty                          shift and go to state 67

state 43

    (27) constant -> array .

    MULTIPLICATION  reduce using rule 27 (constant -> array .)
    DIVISION        reduce using rule 27 (constant -> array .)
    PLUS            reduce using rule 27 (constant -> array .)
    MINUS           reduce using rule 27 (constant -> array .)
    AND             reduce using rule 27 (constant -> array .)
    DOUBEQUAL       reduce using rule 27 (constant -> array .)
    NOT             reduce using rule 27 (constant -> array .)
    OR              reduce using rule 27 (constant -> array .)
    LESSTHANEQUAL   reduce using rule 27 (constant -> array .)
    GREATTHANEQUAL  reduce using rule 27 (constant -> array .)
    GREATTHAN       reduce using rule 27 (constant -> array .)
    LESSTHAN        reduce using rule 27 (constant -> array .)
    RGTPAREN        reduce using rule 27 (constant -> array .)
    COMMA           reduce using rule 27 (constant -> array .)
    SEMICOLON       reduce using rule 27 (constant -> array .)
    RGTBRACSQR      reduce using rule 27 (constant -> array .)


state 44

    (28) constant -> cteN .

    MULTIPLICATION  reduce using rule 28 (constant -> cteN .)
    DIVISION        reduce using rule 28 (constant -> cteN .)
    PLUS            reduce using rule 28 (constant -> cteN .)
    MINUS           reduce using rule 28 (constant -> cteN .)
    AND             reduce using rule 28 (constant -> cteN .)
    DOUBEQUAL       reduce using rule 28 (constant -> cteN .)
    NOT             reduce using rule 28 (constant -> cteN .)
    OR              reduce using rule 28 (constant -> cteN .)
    LESSTHANEQUAL   reduce using rule 28 (constant -> cteN .)
    GREATTHANEQUAL  reduce using rule 28 (constant -> cteN .)
    GREATTHAN       reduce using rule 28 (constant -> cteN .)
    LESSTHAN        reduce using rule 28 (constant -> cteN .)
    RGTPAREN        reduce using rule 28 (constant -> cteN .)
    COMMA           reduce using rule 28 (constant -> cteN .)
    SEMICOLON       reduce using rule 28 (constant -> cteN .)
    RGTBRACSQR      reduce using rule 28 (constant -> cteN .)


state 45

    (41) factoraux -> MINUS . constant
    (26) constant -> . ID
    (27) constant -> . array
    (28) constant -> . cteN
    (29) constant -> . cteS
    (30) constant -> . TRUE codeAddConstBool
    (31) constant -> . FALSE codeAddConstBool
    (32) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (33) cteN -> . FLOAT codeAddConstNumber
    (34) cteN -> . INT codeAddConstNumber
    (35) cteS -> . STRING codeAddConstString
    (84) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 68
    call                           shift and go to state 49
    array                          shift and go to state 43
    cteN                           shift and go to state 44

state 46

    (30) constant -> TRUE . codeAddConstBool
    (120) codeAddConstBool -> . empty
    (88) empty -> .

    MULTIPLICATION  reduce using rule 88 (empty -> .)
    DIVISION        reduce using rule 88 (empty -> .)
    PLUS            reduce using rule 88 (empty -> .)
    MINUS           reduce using rule 88 (empty -> .)
    AND             reduce using rule 88 (empty -> .)
    DOUBEQUAL       reduce using rule 88 (empty -> .)
    NOT             reduce using rule 88 (empty -> .)
    OR              reduce using rule 88 (empty -> .)
    LESSTHANEQUAL   reduce using rule 88 (empty -> .)
    GREATTHANEQUAL  reduce using rule 88 (empty -> .)
    GREATTHAN       reduce using rule 88 (empty -> .)
    LESSTHAN        reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)
    SEMICOLON       reduce using rule 88 (empty -> .)
    RGTPAREN        reduce using rule 88 (empty -> .)
    RGTBRACSQR      reduce using rule 88 (empty -> .)

    codeAddConstBool               shift and go to state 69
    empty                          shift and go to state 70

state 47

    (40) factoraux -> PLUS . constant
    (26) constant -> . ID
    (27) constant -> . array
    (28) constant -> . cteN
    (29) constant -> . cteS
    (30) constant -> . TRUE codeAddConstBool
    (31) constant -> . FALSE codeAddConstBool
    (32) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (33) cteN -> . FLOAT codeAddConstNumber
    (34) cteN -> . INT codeAddConstNumber
    (35) cteS -> . STRING codeAddConstString
    (84) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 71
    call                           shift and go to state 49
    array                          shift and go to state 43
    cteN                           shift and go to state 44

state 48

    (59) term -> factor . MULTIPLICATION codeAddOperator term
    (60) term -> factor . DIVISION codeAddOperator term
    (61) term -> factor . codeAskTerm
    (124) codeAskTerm -> . empty
    (88) empty -> .

    MULTIPLICATION  shift and go to state 74
    DIVISION        shift and go to state 72
    PLUS            reduce using rule 88 (empty -> .)
    MINUS           reduce using rule 88 (empty -> .)
    AND             reduce using rule 88 (empty -> .)
    DOUBEQUAL       reduce using rule 88 (empty -> .)
    NOT             reduce using rule 88 (empty -> .)
    OR              reduce using rule 88 (empty -> .)
    LESSTHANEQUAL   reduce using rule 88 (empty -> .)
    GREATTHANEQUAL  reduce using rule 88 (empty -> .)
    GREATTHAN       reduce using rule 88 (empty -> .)
    LESSTHAN        reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)
    SEMICOLON       reduce using rule 88 (empty -> .)
    RGTPAREN        reduce using rule 88 (empty -> .)
    RGTBRACSQR      reduce using rule 88 (empty -> .)

    codeAskTerm                    shift and go to state 73
    empty                          shift and go to state 75

state 49

    (32) constant -> call . codeIsCalll
    (92) codeIsCalll -> . empty
    (88) empty -> .
